<resources>
    <string name="app_name">Class App</string>
    <string name="btn_name">My Button</string>
    <string name="linear_layout_with_vertical_orientation">Leaner Layout with Vertical Orientation</string>
    <string name="linear_layout_with_horizontal_orientation">Leaner Layout with Horizontal Orientation</string>

    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>

    <string-array name="theme_array">
        <item>Holo-Light</item>
        <item>Console</item>
        <item>Navy</item>
    </string-array>

</resources>